# flaskfarmaider-bot

./: .gitignore  .gitmodules  README.md  app.py  bots.py  config.py  config.sample.yaml  helpers.py  parsers.py  pyproject.toml  requirements.txt  servers.py
flaskfarmaider_bot/: bots.py  cli.py  helpers.py  main.py  models.py  protocols.py  servers.py  settings.sample.yaml
