[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flaskfarmaider_bot"
version = "0.2.12"
dynamic = ["dependencies"]

[project.scripts]
ffaider-bot = "flaskfarmaider_bot.cli:main"

[tool.setuptools]
packages = [
    "flaskfarmaider_bot"
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }